2008-06-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/instantsave.c:
   Compilation fixes.
 * configure.in:
   Version bump.


2008-05-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/instantsave.c:
   Add new GeanyFunctions API.
   Make the code compatible with current Geany API.
   Add the filetype's default extension to the new filename.
 * Makefile.am:
   Add dist-bzip2 and sign targets.
 * configure.in:
   Explicitly depend on Geany >= 0.15.
 * makefile.win32:
   Make Windows Makefile working.
 * README:
   Update and reformat into reST text.
 * configure.in, Makefile.am:
   Remove unnecessary intltool dependency.
 * Initial release: instantsave 0.1.


2008-04-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * po/*, src/*, *:
   Initial import of instantsave plugin.
