@@ -1,3 +1,9 @@
+2008-06-19  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/instantsave.c:
+   Change doc pointer usage.
+
+
 2008-06-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/instantsave.c:
